# nowplaying

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.dev.yml  compose.yml  init.sql  main.py  pyproject.toml  setup.cfg
.github/workflows/: lint_test.yml
botapi_janitor/: Dockerfile  __init__.py  __main__.py
frontend/apple/: index.html
nowplaying/: __init__.py  __main__.py  web_app.py
nowplaying/bot/: __init__.py  bot.py  caching.py  reporter.py  session.py
nowplaying/bot/handlers/: callback_query.py  controls.py  exceptions.py  inline.py  link.py  logout.py  settings.py  start.py
nowplaying/bot/handlers/buttons/: loading.py  logout.py  media.py  toggle.py
nowplaying/bot/handlers/inline/: chosen_inline_result.py  inline.py  inline_utils.py
nowplaying/core/: config.py  database.py  database_init.py  sign.py  song_link.py  spotify.py
nowplaying/database/: __init__.py
nowplaying/downloader/: __init__.py  abc.py  deezer.py  soundcloud.py  youtube.py
nowplaying/downloaders/: __init__.py  abc.py  deezer.py  soundcloud.py  youtube.py
nowplaying/enums/: callback_buttons.py  platform_features.py  platform_type.py  resolved_platform_type.py  start_actions.py
nowplaying/exceptions/: platforms.py
nowplaying/models/: cached_file.py  cached_local_track.py  song_link.py  song_link_platform.py  track.py  user_config.py
nowplaying/routes/: ext.py
nowplaying/startup/: bot.py  web.py
nowplaying/util/: asyncio.py  binary.py  compressing.py  dns.py  exceptions.py  fs.py  http.py  logger.py  retries.py  string.py  time.py  tz.py  url.py  user_agents.py  worker.py
scripts/: gen_ynison_proto.py  purge_tracks_with_duration_0.py
scripts/cache_migration/: .gitignore  consumer.py  producer.py
tests/: test_compression.py  test_deezer.py  test_downloaders.py  test_exc_rethrow.py  test_lastfm.py  test_retries.py  test_songlink.py  test_soundcloud.py  test_string.py  test_url.py  test_yandex.py
ynison_proxy/: Dockerfile  README.md  go.mod  go.sum  main.go
