[tool.poetry]
name = "nowplaying"
version = "1.0.0"
description = ""
authors = ["es3n1n <me@es3n.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
loguru = "^0.7.2"
pydantic-settings = "^2.3.4"
filelock = "^3.15.4"
async-lru = "^2.0.4"
scdl = "^2.11.1"
pycryptodome = "^3.20.0"
pyjwt = "^2.8.0"
yandex-music = "^2.2.0"
websockets = "^12.0"
yt-dlp = "^2024.7.16"
asyncpg = "^0.29.0"
cryptography = "^42.0.8"
orjson = "^3.10.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
mypy = "^1.10.1"
isort = "^5.13.2"
flake8-quotes = "^3.4.0"
flake8-bugbear = "^24.4.26"
flake8-print = "^5.0.0"
asyncpg-stubs = "^0.29.1"
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
types-requests = "^2.32.0.20240712"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
lines_after_imports = 2
combine_as_imports = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
