[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nowplaying"
description = "A Telegram bot for sharing and discovering music across various platforms."
authors = [
    {name = "es3n1n"}
]
license = "Apache-2.0"
requires-python = ">=3.12"
version = "1.0.0"
dependencies = [
    "aiogram==3.12.0",
    "httpx==0.27.2",
    "fastapi==0.112.0",
    "uvicorn==0.30.6",
    "loguru==0.7.2",
    "pydantic-settings==2.4.0",
    "filelock==3.15.4",
    "async-lru==2.0.4",
    "pycryptodome==3.20.0",
    "pyjwt==2.9.0",
    "yandex-music==2.2.0",
    "asyncpg==0.29.0",
    "cryptography==43.0.0",
    "orjson==3.10.7",
    "googleapis-common-protos>=1.65.0",
    "grpcio>=1.66.2",
    "protobuf==5.27.2",
]

[tool.hatch.build.targets.wheel]
packages = ["nowplaying/"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "mypy~=1.11.1",
    "asyncpg-stubs",
    "types-requests",
    "pytest",
    "pytest-asyncio",
    "grpcio-tools>=1.66.2",
]

[project.urls]
source = 'https://github.com/es3n1n/nowplaying'
instance = 'https://t.me/playinnowbot'

[tool.pytest.ini_options]
addopts = "-s -v -rf"
testpaths = "tests"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Conflicting stuff
    "D211", "D212", "D203", "COM812", "ISC001",
    # We need a new line at the end of file
    "W391",
    # No docs
    "D100", "D101", "D102", "D103", "D104", "D107", "D419",
    # I will fix all the fixmes and todos one day, please don't remind me about them
    "FIX001", "FIX002",
    # No issue links yet
    "TD003",
    # We want to bind to all interfaces
    "S104",
]
flake8-quotes.inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py" = ["S101", "INP001", "PLR2004"]
"scripts/*" = ["INP001"]
"nowplaying/util/user_agents.py" = ["E501"]
"nowplaying/external/ynison/pyproto/*" = ["ALL"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = false

[[tool.mypy.overrides]]
module = "yandex_music.*"
ignore_missing_imports = true
